src/styles/grid.css
.grid-main {
  display: grid;
  gap: 16px;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto 160px minmax(292px, max-content) auto 290px 160px auto 336px 140px 380px 56px;
  grid-template-areas:
    'header header'
    'profile profile'
    'bio bio'
    'experience experience'
    'skills skills'
    'cv years'
    'projects projects'
    'swiper swiper'
    'contacts contacts'
    'showcases showcases'
    'template template';
}

/* TODO: Do i need only here? */
@media (min-width: 768px) {
  .grid-main {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto 166px 292px 166px 192px 142px 395px 56px 720px;
    gap: 20px;
    grid-template-areas:
      'header header header header'
      'profile profile experience experience'
      'bio bio experience experience'
      'cv years experience experience'
      'skills skills skills skills'
      'contacts contacts projects projects'
      'showcases showcases projects projects'
      'template template projects projects'
      'swiper swiper swiper swiper';
  }
}

@media (min-width: 1440px) {
  .grid-main {
    display: grid;
    grid-template-columns: 404px 48px 192px 192px 404px;
    grid-template-rows: auto 192px 192px 80px 238px 46px 150px 56px;
    grid-template-areas:
      'header header header header header'
      'profile divider skills skills skills'
      'bio divider cv years projects'
      'bio divider swiper swiper projects'
      'experience divider swiper swiper projects'
      'experience divider swiper swiper showcases'
      'experience divider contacts contacts showcases'
      'experience divider template template showcases';
  }
}

.header {
  grid-area: header;
}
.profile {
  grid-area: profile;
}
.bio {
  grid-area: bio;
}
.experience {
  grid-area: experience;
}
.skills {
  grid-area: skills;
}
.cv {
  grid-area: cv;
}
.years {
  grid-area: years;
}
.projects {
  grid-area: projects;
}
.contacts {
  grid-area: contacts;
}
.swiper {
  grid-area: swiper;
}
.showcases {
  grid-area: showcases;
}
.template {
  grid-area: template;
}
.first {
  grid-area: first;
}
.second {
  grid-area: second;
}
.divider {
  grid-area: divider;
}

